# 3D

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: BeginnerModeToggle.jsx  BoxSelectOverlay.jsx  CommonToolsPanel.jsx  ContextMenu.jsx  ContextToolShelf.jsx  ErrorBoundary.jsx  GuidePanel.jsx  IconButton.jsx  InspectorBadge.jsx  InspectorCard.jsx  InspectorEmptyState.jsx  InspectorRow.jsx  LeftPanel.jsx  LeftToolTabs.jsx  LeftVerticalToolbar.jsx  MainIconToolbar.jsx  ModeHintOverlay.jsx  ModelingModeToolbar.jsx  ModelingToolPanel.jsx  Outliner.jsx  PlaneCutPanel.jsx  PreferencesPanel.jsx  PrintCheckPanel.jsx  PropertyPanel.jsx  QuickModifierButton.jsx  QuickModifierGrid.jsx  QuickStartCards.jsx  RightInspectorPanel.jsx  RightPanel.jsx  RightPanelTabs.jsx  ScaleFeedbackOverlay.jsx  SelectionSizeInfo.jsx  StatusBar.jsx  ToolGroup.jsx  ToolboxPanel.jsx  TopAppBar.jsx  TopToolbar.jsx  ViewAssistPanel.jsx  ViewCube.jsx  Viewport3D.jsx
src/constants/: printers.js  tools.js
src/data/: changelog.js
src/hooks/: useKeyboardShortcuts.js
src/utils/: booleanUtils.js  cameraUtils.js  desktopFileService.js  export.js  extrudeUtils.js  geometry.js  meshRepairUtils.js  modelingVisuals.js  planeCutUtils.js  planeCutVisuals.js  printCheck.js  sceneSerialization.js  selectionHelpers.js  softSelectionUtils.js  transformPivotUtils.js  vertexEditUtils.js
