[package]
name = "print_modeler_desktop"
version = "1.0.0"
description = "3D列印建模器"
authors = ["rock85159339-max"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
